# frediff

./: .gitattributes  .gitmodules  CMakeLists.txt  Makefile  README.md  consolidate.sh  index.html  script.js  worker.js
build_wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
docs/: worker.js
docs/examples/frankenstein/: 1818.txt  1831.txt
docs/examples/stranger/: gilbert.txt  ward.txt
frediff/: diff.js  diff.wasm  glue.js
src/: diff.c  diff.h  find_middle.c  find_middle.h  log.c  main.c  ses.c  ses.h
